# py3dti

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  py3dti.cpp  pyproject.toml
.github/workflows/: pip.yml  wheels.yml
docs/: tutorial.ipynb
tests/: test_basic.py
