[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "py3dti"
version = "0.1.0"
description="Python bindings for the 3dti Audio Spatialiser."
readme = "README.md"
authors = [
  { name = "Johan Pauwels", email = "johan.pauwels@gmail.com" },
]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  #"License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = ["pytest"]


[tool.scikit-build]
sdist.exclude = ["docs", "resources", "3dti_AudioToolkit/3dti_ResourceManager/third_party_libraries/sofacoustics/libsofa/lib"]
wheel.expand-macos-universal-tags = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]


[tool.cibuildwheel]
build-verbosity = 1
skip = "*musllinux*"
test-command = "pytest {project}/tests"
test-extras = ["test"]

[tool.cibuildwheel.macos]
archs = ["x86_64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
